--- a/src/app/styles/pages/_login.scss
+++ b/src/app/styles/pages/_login.scss
@@ -1,10 +1,8 @@
 .l-login {
     width: 100%;
     max-width: 580px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    
+    
     h1 {
         font-family: $Gantari;
         font-size: 36px;
@@ -14,6 +12,7 @@
         margin-bottom: 22px;
     }
     input {
+        outline: none;
         width: 100%;
         font-family: $Gantari;
         font-size: 24px;
@@ -22,6 +21,11 @@
         padding: 12px 24px;
         border: 0;
         border-bottom: 1px solid #e27d41;
+        transition: all .3s ease;
+        opacity: .8;
+        &:focus{
+            opacity: 1;
+        }
         &::placeholder {
             color: #180f24;
         }
@@ -46,6 +50,10 @@
         filter: drop-shadow(0px 4px 12px #130921);
         border: none;
         cursor: pointer;
+        transition: all .3s ease;
+        &:hover{
+            opacity: .8;
+        }
     }
     &__forgot {
         display: block;
