--- a/src/app/styles/pages/_register.scss
+++ b/src/app/styles/pages/_register.scss
@@ -14,6 +14,7 @@
         margin-bottom: 22px;
     }
     input {
+        outline: none;
         width: 100%;
         font-family: $Gantari;
         font-size: 24px;
@@ -25,6 +26,11 @@
         margin-bottom: 24px;
         &::placeholder {
             color: #180f24;
+        }
+        transition: all .3s ease;
+        opacity: .8;
+        &:focus{
+            opacity: 1;
         }
     }
     button {
@@ -44,6 +50,10 @@
         margin: 8px auto 32px auto;
         width: calc(100% - 36px);
         cursor: pointer;
+        transition: all .3s ease;
+        &:hover{
+            opacity: .8;
+        }
     }
     &__forgot {
         display: block;
