--- a/src/app/styles/components/_canvas.scss
+++ b/src/app/styles/components/_canvas.scss
@@ -70,3 +70,17 @@
         font-family: $Unibody-bold;
     }
 }
+
+.pause-war{
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    width: 200px;
+    height: 200px;
+    transform: translate(-50%, -50%);
+
+    img{
+        width: 100%;
+        height: 100%;
+    }
+}
