--- a/src/app/styles/components/_clickAnimation.scss
+++ b/src/app/styles/components/_clickAnimation.scss
@@ -1,8 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
+
 
 .pixelAdd {
     position: absolute;
-    font-family: 'VT323', monospace;
+    font-family: $VT323, monospace;
     color: red;
     opacity: 0;
     font-size: 50px;
