--- a/src/app/styles/main.scss
+++ b/src/app/styles/main.scss
@@ -14,6 +14,7 @@
 @import "components/rulesModal";
 @import "components/lastPixel";
 @import "components/progressBar";
+@import "components/endGame";
 
 @import "pages/auth";
 @import "pages/login";
