--- a/src/app/styles/components/_canvas.scss
+++ b/src/app/styles/components/_canvas.scss
@@ -44,12 +44,13 @@
         width: 10px;
         height: 10px;
         background-color: transparent;
-        border: 1px solid #000000;
+        border: 2px solid black;
+        box-shadow: 1px 1px 1px 2px rgba(255, 255, 255, 1);
         cursor: none;
     }
 }
 
-.pause-war{
+.pause-war {
     position: absolute;
     left: 50%;
     top: 50%;
@@ -57,7 +58,7 @@
     height: 200px;
     transform: translate(-50%, -50%);
 
-    img{
+    img {
         width: 100%;
         height: 100%;
     }
