[ADD] twitch & logout icon hidden on eyes click

--- a/src/app/styles/components/_actionsMenus.scss
+++ b/src/app/styles/components/_actionsMenus.scss
@@ -19,6 +19,19 @@
  }
 }
 
+.btn-logout {
+ width: 51px;
+ height: 51px;
+ background: #FFF;
+ border-radius: 100px;
+ bottom: 30px;
+ right: 5%;
+ position: absolute;
+ display: flex;
+ align-items: center;
+ justify-content: center
+}
+
 .hide {
  display: none;
 }
