--- a/src/app/styles/components/_rulesModal.scss
+++ b/src/app/styles/components/_rulesModal.scss
@@ -1,64 +1,74 @@
 .rules-modal {
- position: absolute;
- left: 50%;
- top: -150%;
- transform: translate(-50%, -50%);
- width: 70%;
- height: 70%;
- background-color: white;
- padding: 40px;
- border: solid 1px $main-orange;
- z-index: 12;
- transition: 0.4s ease-in-out all;
+    position: absolute;
+    left: 50%;
+    top: -150%;
+    transform: translate(-50%, -50%);
+    width: 70%;
+    height: 70%;
+    background-color: white;
+    padding: 40px;
+    border: solid 1px $main-orange;
+    z-index: 12;
+    transition: 0.4s ease-in-out all;
 
- &__content {
-  width: 100%;
-  height: 100%;
-  position: relative;
-  font-family: $Gantari;
+    &__content {
+        width: 100%;
+        height: 100%;
+        position: relative;
+        font-family: $Gantari;
 
-  &__header {
-   text-align: center;
+        &__header {
+            text-align: center;
 
-   h2 {
-    @include main-title;
-    color: black;
+            h2 {
+                @include main-title;
+                color: $main-orange;
+                position: relative;
+                display: inline;
+                &::before {
+                    position: absolute;
+                    top: 17px;
+                    left: calc(50% + 4px);
+                    z-index: -1;
+                    transform: translateX(-50%);
+                    content: "Consignes";
+                    @include main-title;
+                    color: black;
+                }
 
-    span {
-     @include main-title;
-     color: $main-orange;
+                // span {
+                //  @include main-title;
+                // }
+            }
+        }
+
+        &__body {
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+            margin-top: 75px;
+            font-family: $Gantari;
+            span {
+                color: $main-orange;
+                font-weight: bold;
+            }
+        }
     }
-   }
-  }
 
-  &__body{
-   display: flex;
-   flex-direction: column;
-   gap: 20px;
-   margin-top: 75px;
-   font-family: $Gantari;
-   span{
-    color: $main-orange;
-    font-weight: bold;
-   }
-  }
- }
-
- .close-icon {
-  cursor: pointer;
-  position: absolute;
-  right: 3%;
-  top: 3%;
- }
+    .close-icon {
+        cursor: pointer;
+        position: absolute;
+        right: 3%;
+        top: 3%;
+    }
 }
 
-.coin-rules{
- width: 24px;
+.coin-rules {
+    width: 24px;
 }
-
 
 .modal-active {
- top: 50%;
+    top: 50%;
 }
 
 .images {
@@ -68,4 +78,4 @@
     width: 100%;
     height: 40%;
     margin: 3rem 0 0 0;
- }
+}
