[FIX] align header item

--- a/src/app/styles/components/_progressBar.scss
+++ b/src/app/styles/components/_progressBar.scss
@@ -2,7 +2,7 @@
 
     &__totalcoins {
         position: absolute;
-        top: 30px;
+        top: 6%;
         left: 30px;
         background-color: #180F24;
         padding: 6px 17px 6px 17px;
