--- a/src/app/styles/components/_canvas.scss
+++ b/src/app/styles/components/_canvas.scss
@@ -5,8 +5,8 @@
     height: 100vh;
 
     &__game {
-        width: 100%;
-        height: 100%;
+        width: 2000px;
+        height: 1000px;
         box-shadow: 1px 1px 10px -5px rgba(0, 0, 0, 0.5);
         cursor: none;
         z-index: 1;
@@ -44,11 +44,25 @@
         width: 10px;
         height: 10px;
         background-color: transparent;
+        box-shadow: 1px 1px 1px 2px #fff;
         border: 2px solid black;
-        box-shadow: 1px 1px 1px 2px rgba(255, 255, 255, 1);
+        z-index: 9999;
+        pointer-events: none;
         cursor: none;
     }
 }
+
+.canva-container {
+    width: 100vw;
+    height: 100vh;
+}
+
+.scale-btn {
+    font-size: 24px;
+    position: absolute;
+    z-index: 3;
+}
+
 
 .pause-war {
     position: absolute;
