[ADD] scale button

--- a/src/app/styles/main.scss
+++ b/src/app/styles/main.scss
@@ -15,6 +15,7 @@
 @import "components/lastPixel";
 @import "components/progressBar";
 @import "components/endGame";
+@import "components/scaleButton";
 
 @import "pages/auth";
 @import "pages/login";
