--- a/src/app/styles/pages/_login.scss
+++ b/src/app/styles/pages/_login.scss
@@ -1,8 +1,7 @@
 .l-login {
     width: 100%;
     max-width: 580px;
-    
-    
+    padding: 0 24px;
     h1 {
         font-family: $Gantari;
         font-size: 36px;
@@ -10,6 +9,10 @@
         line-height: 52px;
         text-align: center;
         margin-bottom: 22px;
+        @media screen and (max-width: 768px) {
+            font-size: 32px;
+            line-height: 48px;
+        }
     }
     input {
         outline: none;
@@ -21,9 +24,9 @@
         padding: 12px 24px;
         border: 0;
         border-bottom: 1px solid #e27d41;
-        transition: all .3s ease;
-        opacity: .8;
-        &:focus{
+        transition: all 0.3s ease;
+        opacity: 0.8;
+        &:focus {
             opacity: 1;
         }
         &::placeholder {
@@ -50,9 +53,9 @@
         filter: drop-shadow(0px 4px 12px #130921);
         border: none;
         cursor: pointer;
-        transition: all .3s ease;
-        &:hover{
-            opacity: .8;
+        transition: all 0.3s ease;
+        &:hover {
+            opacity: 0.8;
         }
     }
     &__forgot {
