--- a/src/app/styles/pages/_reset.scss
+++ b/src/app/styles/pages/_reset.scss
@@ -5,6 +5,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    padding: 0 24px;
     h1 {
         font-family: $Gantari;
         font-size: 36px;
@@ -12,6 +13,10 @@
         line-height: 52px;
         text-align: center;
         margin-bottom: 22px;
+        @media screen and (max-width: 768px) {
+            font-size: 32px;
+            line-height: 48px;
+        }
     }
     input {
         outline: none;
@@ -29,9 +34,9 @@
         &:first-of-type {
             margin-bottom: 24px;
         }
-        transition: all .3s ease;
-        opacity: .8;
-        &:focus{
+        transition: all 0.3s ease;
+        opacity: 0.8;
+        &:focus {
             opacity: 1;
         }
     }
@@ -49,13 +54,12 @@
         background-color: #e27d41;
         filter: drop-shadow(0px 4px 12px #130921);
         border: none;
-        margin-top: 8px;
-        margin-bottom: 32px;
-        width: 100%;
+        margin: 8px auto 32px auto;
+        width: calc(100% - 36px);
         cursor: pointer;
-        transition: all .3s ease;
-        &:hover{
-            opacity: .8;
+        transition: all 0.3s ease;
+        &:hover {
+            opacity: 0.8;
         }
     }
     &__forgot {
