--- a/src/app/styles/components/_lastPixel.scss
+++ b/src/app/styles/components/_lastPixel.scss
@@ -12,6 +12,13 @@
   position: relative;
   height: 100%;
   width: 100%;
+  top: 12.5%;
+  color: white;
+  font-family: $Unibody-bold;
+  & > h2 {
+    text-align: center;
+    margin-bottom: 2rem;
+  }
 
   .close-icon {
    position: absolute;
@@ -29,6 +36,23 @@
 
 .menu-active {
  right: 0;
+}
+
+.user-list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.user-card {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #242424;
+  border-radius: 100px;
+  width: 70%;
+  height: 2rem;
+  margin: 1rem 0;
 }
 
 @keyframes pulse {
