--- a/src/app/styles/main.scss
+++ b/src/app/styles/main.scss
@@ -16,6 +16,7 @@
 @import "components/progressBar";
 @import "components/endGame";
 @import "components/scaleButton";
+@import "components/tutorial";
 
 @import "pages/auth";
 @import "pages/login";
