--- a/src/app/styles/components/_canvas.scss
+++ b/src/app/styles/components/_canvas.scss
@@ -77,3 +77,12 @@
         height: 100%;
     }
 }
+
+@media (max-width: 600px) {
+    #cursor {
+      display: none
+    }
+    #game {
+        overflow: hidden;
+    }
+  }
