--- a/src/app/styles/components/_progressBar.scss
+++ b/src/app/styles/components/_progressBar.scss
@@ -97,6 +97,7 @@
         top: 50%;
         left: 30px;
         transform: translateY(-50%);
+        
     }
 
     &__concours {
@@ -129,3 +130,12 @@
 
 
 }
+
+@media (max-width: 600px) {
+  .c-progressbar__totalcoins {
+    display: none;
+  }
+  .c-progressbar__allbar {
+    left: 0;
+  }
+  }
