--- a/src/app/styles/components/_actionsMenus.scss
+++ b/src/app/styles/components/_actionsMenus.scss
@@ -11,6 +11,8 @@
   &__item {
    cursor: pointer;
    transition: 0.3s ease-in-out all;
+   width: 50px;
+   height: 50px;
 
    &:hover {
     animation: pulse 0.5s ease-in-out infinite;
@@ -52,11 +54,14 @@
 
 @media (max-width: 600px) {
   .action-menus__menu {
-    display: block;
+    flex-direction: column;
     right: 15px;
   }
   .action-menus__menu__item_2, .btn-logout {
     display: none;
   }
-
+  .action-menus__menu__item {
+    width: 50px;
+    height: 50px;
   }
+}
