--- a/src/app/styles/components/_canvas.scss
+++ b/src/app/styles/components/_canvas.scss
@@ -78,11 +78,27 @@
     }
 }
 
+.modal {
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 20%;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 10;
+}
+
 @media (max-width: 600px) {
     #cursor {
       display: none
     }
     #game {
         overflow: hidden;
+    }
+    .modal {
+        right: 0;
+        bottom: 0;
+        width: 100%;
+        height: 45vh;
     }
   }
