--- a/src/app/styles/components/_canvas.scss
+++ b/src/app/styles/components/_canvas.scss
@@ -80,13 +80,19 @@
 
 .modal {
     position: fixed;
-    top: 0;
     right: 0;
+    top: 0;
     width: 20%;
     height: 100vh;
     background-color: rgba(0, 0, 0, 0.5);
     z-index: 10;
 }
+.action-menus__menu__item_cross {
+    z-index: 12;
+    position: fixed;
+    top: 10px;
+    right: 10px;
+   }
 
 @media (max-width: 600px) {
     #cursor {
@@ -98,6 +104,7 @@
     .modal {
         right: 0;
         bottom: 0;
+        top: initial;
         width: 100%;
         height: 45vh;
     }
