--- a/src/app/styles/components/_lastPixel.scss
+++ b/src/app/styles/components/_lastPixel.scss
@@ -44,3 +44,11 @@
   transform: scale(1);
  }
 }
+
+
+@media (max-width: 600px) {
+    .lastPixel {
+        width: 55%;
+        z-index: 5;
+    }
+  }
