--- a/src/app/styles/components/_canvas.scss
+++ b/src/app/styles/components/_canvas.scss
@@ -80,9 +80,9 @@
 
 .modal {
     position: fixed;
-    right: 0;
+    right: 120px;
     top: 0;
-    width: 20%;
+    width: 30%;
     height: 100vh;
     background-color: rgba(0, 0, 0, 0.5);
     z-index: 10;
@@ -94,7 +94,7 @@
     right: 10px;
    }
 
-@media (max-width: 600px) {
+@media (max-width: 1000px) {
     #cursor {
       display: none
     }
@@ -102,10 +102,8 @@
         overflow: hidden;
     }
     .modal {
-        right: 0;
-        bottom: 0;
-        top: initial;
-        width: 100%;
-        height: 45vh;
+        left: 0;
+        width: 80%;
+        height: 100%;
     }
   }
