--- a/src/app/styles/components/_lastPixel.scss
+++ b/src/app/styles/components/_lastPixel.scss
@@ -5,14 +5,13 @@
  height: 100vh;
  width: 20%;
  z-index: 2;
- background-color: rgba($color: #383838, $alpha: 0.7 );
+ background-color: rgba($color: white, $alpha: 1 );
  transition: 0.4s ease-in-out all;
 
  &__content {
   position: relative;
   height: 100%;
   width: 100%;
-  top: 12.5%;
   color: white;
   font-family: $Unibody-bold;
   & > h2 {
@@ -35,7 +34,7 @@
 }
 
 .menu-active {
- right: 0;
+ right: 120px;
 }
 
 .user-list {
@@ -48,7 +47,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #242424;
+  background: #242424;
   border-radius: 100px;
   width: 70%;
   height: 2rem;
@@ -70,9 +69,9 @@
 }
 
 
-@media (max-width: 600px) {
+@media (max-width: 1000px) {
     .lastPixel {
-        width: 55%;
-        z-index: 5;
+      width: 70%;
+      z-index: 10;
     }
   }
