--- a/src/app/styles/base/_reset.scss
+++ b/src/app/styles/base/_reset.scss
@@ -33,7 +33,7 @@ section {
  vertical-align: baseline;
 }
 
-body{
+body, .App{
  overflow: hidden;
 }
 
@@ -87,9 +87,3 @@ textarea:focus::placeholder {
 ::-webkit-scrollbar-thumb:hover {
  background: #888;
 }
-
-@media (max-width: 600px) {
-    #root {
-        overflow: hidden;
-    }
-  }
