[ADD] ranking modal

--- a/src/app/styles/main.scss
+++ b/src/app/styles/main.scss
@@ -14,6 +14,7 @@
 @import "components/rulesModal";
 @import "components/lastPixel";
 @import "components/progressBar";
+@import "components/rankingMenu";
 @import "components/endGame";
 @import "components/scaleButton";
 @import "components/tutorial";
