--- a/src/app/styles/components/_lastPixel.scss
+++ b/src/app/styles/components/_lastPixel.scss
@@ -16,10 +16,10 @@
     color: white;
     font-family: $Unibody-bold;
 
-    &>h2 {
+    & > h2 {
       text-align: center;
       margin: 1rem;
-      color: #180F24;
+      color: #180f24;
     }
 
     .close-icon {
@@ -57,6 +57,18 @@
   width: 70%;
   height: 2rem;
   margin: 1rem 0;
+  &__img-container {
+    width: 42px;
+    height: 42px;
+    border-radius: 100px;
+    overflow: hidden;
+    margin-right: 1rem;
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
 }
 
 @keyframes pulse {
@@ -72,7 +84,6 @@
     transform: scale(1);
   }
 }
-
 
 @media (max-width: 1000px) {
   .lastPixel {
