--- a/src/app/styles/components/_rankingMenu.scss
+++ b/src/app/styles/components/_rankingMenu.scss
@@ -8,6 +8,48 @@
  overflow-y: scroll;
  background-color: white;
  transition: 0.4s ease-in-out all;
+
+ &__content {
+  position: relative;
+  height: 100%;
+  width: 100%;
+  color: white;
+  font-family: $Unibody-bold;
+
+  h2 {
+   text-align: center;
+   color: black;
+   margin: 1rem;
+  }
+ }
+
+ .user-rank-list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+ }
+
+ .user-rank-card {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #242424;
+  border-radius: 100px;
+  box-sizing: unset;
+  padding: 10px;
+  width: 70%;
+  height: 2rem;
+  margin: 1rem auto;
+ }
+
+ .user-rank {
+  width: fit-content;
+  display: flex;
+  align-items: center;
+  height: 100%;
+  border-top-left-radius: 20px;
+  background-color: red;
+ }
 }
 
 .ranking-menu-active {
