[ADD] : add loader

--- a/src/app/styles/main.scss
+++ b/src/app/styles/main.scss
@@ -19,6 +19,7 @@
 @import "components/scaleButton";
 @import "components/tutorial";
 @import "components/hoverInfo";
+@import 'components/loader';
 
 @import "pages/auth";
 @import "pages/login";
