--- a/src/app/styles/components/_progressBar.scss
+++ b/src/app/styles/components/_progressBar.scss
@@ -2,66 +2,19 @@
 
     &__totalcoins {
         position: absolute;
-        top: 6%;
-        left: 50px;
-        width: 51px;
-        height: 51px;
+        top: 10%;
+        left: 35px;
         cursor: pointer;
 
-        img {
-            position: relative;
-            z-index: 999;
-        }
-
-        .coin-modal {
-            width: 10vw;
-            opacity: 0;
-            position: absolute;
-            top: -1000%;
-            left: 20px;
-            transition: .3s ease-in-out all;
+        &__container {
             background-color: white;
-            z-index: 3;
+            padding: 10px;
+            border: solid 3px #FFCC66;
+            border-radius: 5px;
 
-            &__header {
-                width: 100%;
-                background-color: #9D6891;
-                padding: 20px 30px;
-                text-align: center;
-
-                span {
-                    font-family: $Unibody-black;
-                    color: white;
-                    font-size: 11px;
-                }
+            span {
+                font-family: $Unibody-bold;
             }
-
-            &__body {
-                padding: 20px;
-            }
-
-            &__footer {
-                background-color: #9D6891;
-                color: white;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                padding: 10px 0;
-                gap: 8px;
-
-                img{
-                    width: 16px
-                }
-
-                span{
-                    font-family: $Unibody-bold;
-                }
-            }
-        }
-
-        .coin-modal-active {
-            opacity: 1;
-            top: 25%;
         }
     }
 
@@ -92,12 +45,16 @@
         border: none;
         flex-direction: column;
         justify-content: end;
+        border-left: 4px solid #FFCC66;
+        border-right: 4px solid #FFCC66;
     }
 
     &__barTop3 {
         width: 27px;
         height: 15px;
         background-color: #180F24;
+        border-left: 4px solid #FFCC66;
+        border-right: 4px solid #FFCC66;
         margin-left: 33px;
     }
 
@@ -105,6 +62,8 @@
         width: 18px;
         height: 15px;
         background-color: #180F24;
+        border-left: 4px solid #FFCC66;
+        border-right: 4px solid #FFCC66;
         margin-left: 38px;
     }
 
@@ -112,6 +71,9 @@
         width: 10px;
         height: 15px;
         background-color: #180F24;
+        border-top: 4px solid #FFCC66;
+        border-left: 4px solid #FFCC66;
+        border-right: 4px solid #FFCC66;
         margin-left: 42px;
     }
 
@@ -119,6 +81,8 @@
         width: 27px;
         height: 15px;
         background-color: #FFCC66;
+        border-left: 4px solid #FFCC66;
+        border-right: 4px solid #FFCC66;
         margin-left: 33px;
     }
 
@@ -126,6 +90,8 @@
         width: 18px;
         height: 15px;
         background-color: #FFCC66;
+        border-right: 3px solid #FFCC66;
+        border-left: 3px solid #FFCC66;
         margin-left: 38px;
     }
 
@@ -133,20 +99,24 @@
         width: 10px;
         height: 15px;
         background-color: #FFCC66;
+        background-color: #FFCC66;
+        border-left: 4px solid #FFCC66;
+        border-right: 4px solid #FFCC66;
         margin-left: 42px;
     }
 
     &__fill {
         width: 100%;
         background-color: #FFCC66;
-
         display: flex;
     }
 
     &__popup {
-        background-color: #180F24;
-        padding: 6px 17px 6px 17px;
+
+        position: relative;
+        left: 15px;
         margin-top: 10px;
+        animation: coinAnim 1s ease-in forwards;
     }
 
     &__allbar {
@@ -154,7 +124,7 @@
         top: 50%;
         left: 30px;
         transform: translateY(-50%);
-        
+
     }
 
     &__concours {
@@ -187,10 +157,23 @@
 }
 
 @media (max-width: 600px) {
-  .c-progressbar__totalcoins {
-    display: none;
-  }
-  .c-progressbar__allbar {
-    left: 0;
-  }
-  }
+    .c-progressbar__totalcoins {
+        display: none;
+    }
+
+    .c-progressbar__allbar {
+        left: 0;
+    }
+}
+
+@keyframes coinAnim {
+    from {
+        transform: rotateY(0deg);
+        opacity: 1;
+    }
+
+    to {
+        transform: rotateY(1280deg);
+        opacity: 0;
+    }
+}
