--- a/src/app/styles/components/_actionsMenus.scss
+++ b/src/app/styles/components/_actionsMenus.scss
@@ -7,7 +7,7 @@
  display: flex;
  flex-direction: column;
  justify-content: center;
- width: 120px;
+ width: 10%;
 
  &__menu {
   display: flex;
@@ -20,6 +20,8 @@
    cursor: pointer;
    display: flex;
    transition: 0.3s ease-in-out all;
+   width: 50px;
+   height: 50px;
 
    &:hover {
     animation: pulse 0.5s ease-in-out infinite;
@@ -29,19 +31,34 @@
  }
 }
 
-.action-menu-transparent {
-  background: transparent;
+.action-menus-hidden {
+  background-color: transparent;
+}
+
+.close-icon {
+  position: absolute;
+  top: 25px;
+  right: 4%;
+  z-index: 99;
 }
 
 .btn-logout {
  position: relative;
- bottom: -20%;
+ bottom: -55%;
 }
 
 .pixel-war-logo {
-  width: 90%;
+  width: 100%;
   position: relative;
-  top: -20%
+  top: -20%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.menu {
+  width: 50px;
+  height: 50px;
 }
 
 .hide {
@@ -67,7 +84,8 @@
     display: none;
   }
   .action-menus {
-    background: transparent;
+    width: 20vw;
+    height: 100vh;
   }
   .action-menus__menu {
     flex-direction: column;
@@ -79,6 +97,8 @@
   .action-menus__menu__item {
     width: 50px;
     height: 50px;
+    display: flex;
+    justify-content: center;
   }
   .action-menus__menu__item:hover {
     animation: none;
@@ -86,5 +106,8 @@
   .action-menus__menu__item__opened {
     position: relative;
     z-index: 11;
+  }
+  .menu {
+    width: 100%;
   }
 }
