--- a/src/app/styles/components/_lastPixel.scss
+++ b/src/app/styles/components/_lastPixel.scss
@@ -34,7 +34,8 @@
 }
 
 .menu-active {
- right: 120px;
+  width: 20vw;
+  right: 10%;
 }
 
 .user-list {
@@ -54,6 +55,26 @@
   margin: 1rem 0;
 }
 
+@keyframes right-to-center-600 {
+  0% {
+      left: 0%;
+      z-index: 99;
+  }
+  100% {
+      left: 100%
+  }
+}
+
+@keyframes center-to-right-600 {
+  0% {
+      left: 100%
+  }
+  100% {
+      left: 0%;
+      z-index: 99;
+  }
+}
+
 @keyframes pulse {
  0% {
   transform: scale(1);
@@ -70,8 +91,19 @@
 
 
 @media (max-width: 1000px) {
-    .lastPixel {
-      width: 70%;
-      z-index: 10;
+  .lastPixel {
+    animation: right-to-center-600 ease-in 500ms forwards;
+    width: 80vw;
+  }
+  .lastPixel__text {
+    color: black;
+    margin-top: 15px
+  }
+    .menu-active {
+      animation: center-to-right-600 ease-out 500ms forwards;
+      left: 0;
+      width: 80vw;
+      height: 100vh;
+      z-index: 99;
     }
   }
