--- a/src/app/styles/components/_rankingMenu.scss
+++ b/src/app/styles/components/_rankingMenu.scss
@@ -3,6 +3,7 @@
  top: 0;
  right: -100%;
  height: 100vh;
+ width: 25%;
  overflow-y: scroll;
  background-color: white;
  transition: 0.4s ease-in-out all;
