--- a/src/app/styles/abstracts/_variables.scss
+++ b/src/app/styles/abstracts/_variables.scss
@@ -1,2 +1,9 @@
 // COLORS
 $main-orange: #E27D41;
+
+// FONTS
+$Unibody-black: "Unibody-black";
+$Unibody-bold: "Unibody-bold";
+$Unibody-regular: "Unibody-regular";
+$Gantari: "Gantari";
+$VT323: "VT323";
