--- a/src/app/styles/main.scss
+++ b/src/app/styles/main.scss
@@ -14,10 +14,13 @@
 @import "components/rulesModal";
 @import "components/lastPixel";
 @import "components/progressBar";
+@import "components/rankingMenu";
 @import "components/endGame";
 @import "components/scaleButton";
 @import "components/tutorial";
 @import "components/hoverInfo";
+@import "components/loader";
+@import "components/userProfile";
 
 @import "pages/auth";
 @import "pages/login";
