--- a/src/app/styles/components/_canvas.scss
+++ b/src/app/styles/components/_canvas.scss
@@ -78,15 +78,19 @@
     }
 }
 
+#game {
+    overflow: hidden;
+}
+
 .modal {
     position: fixed;
-    right: 120px;
     top: 0;
+    right: 10%;
     width: 30%;
     height: 100vh;
-    background-color: rgba(0, 0, 0, 0.5);
     z-index: 10;
 }
+
 .action-menus__menu__item_cross {
     z-index: 12;
     position: fixed;
@@ -94,16 +98,38 @@
     right: 10px;
    }
 
+@keyframes rigth-to-center-1000 {
+    0% {
+        transform: translateX(0px);
+    }
+    100% {
+        transform: translateX(-100px);
+    }
+}
+@keyframes center-to-right-1000 {
+    0% {
+        transform: translateX(0px);
+    }
+    100% {
+        transform: translateX(100px);
+    }
+}
+
 @media (max-width: 1000px) {
     #cursor {
       display: none
     }
-    #game {
-        overflow: hidden;
-    }
     .modal {
+        right: initial;
+        animation: center-to-right-600 ease-in 500ms forwards;
         left: 0;
-        width: 80%;
-        height: 100%;
+        width: 80vw;
+        height: 100vh;
     }
+    .iFrameOpened {
+        animation: right-to-center-600 ease-out 1000ms forwards;
+        left: 0;
+        width: 80vw;
+        height: 100vh;
+      }
   }
