--- a/src/app/styles/components/_lastPixel.scss
+++ b/src/app/styles/components/_lastPixel.scss
@@ -1,40 +1,45 @@
 .lastPixel {
- position: absolute;
- right: -100%;
- top: 0;
- height: 100vh;
- width: 20%;
- z-index: 2;
- background-color: rgba($color: white, $alpha: 1 );
- transition: 0.4s ease-in-out all;
+  position: absolute;
+  right: -100%;
+  top: 0;
+  height: 100vh;
+  width: 20%;
+  z-index: 2;
+  background-color: rgba($color: white, $alpha: 1);
+  transition: 0.4s ease-in-out all;
+  overflow-y: scroll;
 
- &__content {
-  position: relative;
-  height: 100%;
-  width: 100%;
-  color: white;
-  font-family: $Unibody-bold;
-  & > h2 {
-    text-align: center;
-    margin-bottom: 2rem;
+  &__content {
+    position: relative;
+    height: 100%;
+    width: 100%;
+    color: white;
+    font-family: $Unibody-bold;
+
+    &>h2 {
+      text-align: center;
+      margin: 1rem;
+      text-transform: uppercase;
+      color: #180f24;
+    }
+
+    .close-icon {
+      position: absolute;
+      right: 10%;
+      top: 33px;
+      transform: translateX(-50%);
+      cursor: pointer;
+
+      &:hover {
+        animation: pulse 0.5s ease-in-out infinite;
+      }
+    }
   }
-
-  .close-icon {
-   position: absolute;
-   right: 10%;
-   top: 33px;
-   transform: translateX(-50%);
-   cursor: pointer;
-
-   &:hover{
-    animation: pulse 0.5s ease-in-out infinite;
-   }
-  }
- }
 }
 
 .menu-active {
- right: 120px;
+  width: 20vw;
+  right: 10%;
 }
 
 .user-list {
@@ -49,29 +54,74 @@
   justify-content: center;
   background: #242424;
   border-radius: 100px;
+  box-sizing: unset;
+  padding: 10px;
   width: 70%;
   height: 2rem;
   margin: 1rem 0;
+
+  &__img-container {
+    min-width: 42px;
+    height: 42px;
+    border-radius: 100px;
+    overflow: hidden;
+    margin-right: 1rem;
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
+}
+
+@keyframes right-to-center-600 {
+  0% {
+      left: 0%;
+      z-index: 99;
+  }
+  100% {
+      left: 100%
+  }
+}
+
+@keyframes center-to-right-600 {
+  0% {
+      left: 100%
+  }
+  100% {
+      left: 0%;
+      z-index: 99;
+  }
 }
 
 @keyframes pulse {
- 0% {
-  transform: scale(1);
- }
+  0% {
+    transform: scale(1);
+  }
 
- 50% {
-  transform: scale(1.1);
- }
+  50% {
+    transform: scale(1.1);
+  }
 
- 100% {
-  transform: scale(1);
- }
+  100% {
+    transform: scale(1);
+  }
 }
 
-
 @media (max-width: 1000px) {
-    .lastPixel {
-      width: 70%;
-      z-index: 10;
+  .lastPixel {
+    animation: right-to-center-600 ease-in 500ms forwards;
+    width: 80vw;
+  }
+  .lastPixel__text {
+    color: black;
+    margin-top: 15px
+  }
+    .menu-active {
+      animation: center-to-right-600 ease-out 500ms forwards;
+      left: 0;
+      width: 80vw;
+      height: 100vh;
+      z-index: 99;
     }
   }
