[FIX] colorbar on phone

--- a/src/app/styles/components/_actionsMenus.scss
+++ b/src/app/styles/components/_actionsMenus.scss
@@ -113,5 +113,12 @@
   }
   .close-icon {
     display: block;
+    right: 7%
+  }
+}
+
+@media (max-width: 1000px) {
+  .close-icon {
+    right: 4%
   }
 }
