--- a/src/app/styles/components/_actionsMenus.scss
+++ b/src/app/styles/components/_actionsMenus.scss
@@ -30,9 +30,10 @@
   }
   &__arrow-icon {
     position: absolute;
-    right: 4%;
+    right: 5%;
     top: 5%;
     z-index: 99;
+    transform: rotate(180deg);
   }
 }
 
