--- a/src/app/styles/components/_actionsMenus.scss
+++ b/src/app/styles/components/_actionsMenus.scss
@@ -11,9 +11,9 @@
 
  &__menu {
   display: flex;
+  align-items: center;
   flex-direction: column;
   justify-content: center;
-  width: 10%;
   gap: 34px;
   fill: white;
 
@@ -78,6 +78,7 @@
 .safari-menu {
   margin: 10px
 }
+}
 
 @keyframes pulse {
   0% {
@@ -96,6 +97,7 @@
 @media (max-width: 1000px) {
   .pixel-war-logo {
     display: none;
+    width: 90%;
   }
   .action-menus {
     width: 20vw;
@@ -103,6 +105,7 @@
   }
   .action-menus__menu {
     flex-direction: column;
+    width: 100%;
     right: 15px;
   }
   .action-menus__menu__item_2,
@@ -135,5 +138,4 @@
   .close-icon {
     right: 4%;
   }
-}
 }
