--- a/src/app/styles/components/_colorBar.scss
+++ b/src/app/styles/components/_colorBar.scss
@@ -13,6 +13,9 @@
   padding: 15px 30px;
   border-radius: 50px;
   gap: 10px;
+  @media screen and (max-width: 1000px) {
+    margin-bottom: 45px;
+  }
 }
 
 .cooldown {
@@ -44,10 +47,10 @@
   cursor: pointer;
   position: fixed;
   right: 4%;
-  transition: .5s;
+  transition: 0.5s;
   &-2 {
     left: 4%;
-    transform: rotate(180deg)
+    transform: rotate(180deg);
   }
 }
 
@@ -58,7 +61,7 @@
   overflow-x: auto;
   scroll-snap-type: x;
   scroll-behavior: smooth;
-  gap: 15px
+  gap: 15px;
 }
 
 .color-list::-webkit-scrollbar {
@@ -69,10 +72,15 @@
   transform: rotate(180deg);
 }
 
+.safari-color-item {
+  margin: 0px 5px 0px 5px; 
+}
+
 @media (max-width: 1000px) {
   .colorBar {
     width: 50vw;
     padding: 10px 30px;
+    bottom: 50px
   }
   .color-list {
     max-width: 100%;
@@ -82,6 +90,6 @@
     height: 20px;
   }
   .arrow-icon {
-    width: 10px;
+    width: 7px;
   }
 }
