[UPDATE] display coin / 10 box on mobile

--- a/src/app/styles/components/_progressBar.scss
+++ b/src/app/styles/components/_progressBar.scss
@@ -157,7 +157,11 @@
 
 @media (max-width: 600px) {
     .c-progressbar__totalcoins {
-        display: none;
+        left: 10px;
+
+        span{
+            font-size: 12px;
+        }
     }
 
     .c-progressbar__allbar {
