--- a/src/app/styles/components/_actionsMenus.scss
+++ b/src/app/styles/components/_actionsMenus.scss
@@ -14,7 +14,6 @@
   align-items: center;
   flex-direction: column;
   justify-content: center;
-  gap: 34px;
   fill: white;
 
   &__item {
@@ -23,6 +22,7 @@
     transition: 0.3s ease-in-out all;
     width: 50px;
     height: 50px;
+    margin: 15px 0;
 
     &:hover {
       animation: pulse 0.5s ease-in-out infinite;
