--- a/src/app/styles/components/_lastPixel.scss
+++ b/src/app/styles/components/_lastPixel.scss
@@ -61,11 +61,10 @@
   margin: 1rem 0;
 
   &__img-container {
-    min-width: 42px;
+    width: 42px;
     height: 42px;
-    border-radius: 100px;
+    border-radius: 50%;
     overflow: hidden;
-    margin-right: 1rem;
     img {
       width: 100%;
       height: 100%;
